--- a/day-1-brownian/index.html
+++ b/day-1-brownian/index.html
@@ -57,6 +57,10 @@
       iframe.src = 'frame.html';
       container.insertBefore(iframe, null);
     }
+    var button = document.getElementById('reload-button');
+    setInterval(function() {
+      button.click();
+    }, 1000);
   </script>
 </body>
 </html>
